src/objects/BGCK__Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Application_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Received</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Current_Version__c</fullName>
        <label>Current Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Next_Version__c</fullName>
        <label>Next Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCK__Version_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Version Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>MUSW__Review__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CheckList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>